Iron out bugs, warp stage training completes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Project
+# machine learning models
+checkpoints 
+# actual data for datasets
+data 
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
